--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.4",
     "pinia": "^2.0.30",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
