--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/lodash": "^4.14.191",
     "axios": "^0.21.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.30",
     "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.6.0",
