--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.0.0",
     "@types/lodash": "^4.14.191",
     "axios": "^0.21.4",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "pinia": "^2.0.30",
     "pinia-plugin-persistedstate": "^3.1.0",
